<!--
 ~ Copyright 2021 Aleksandr Kamyshnikov
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~     https://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->

<resources>
    <string name="app_name">Airing anime schedule</string>

    <!-- TODO: global constants -->
    <string name="invalid_url">https://www.invalid.com</string>

    <!-- Menu actions -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <!-- Navigation drawer -->
    <string name="nav_drawer_main">Discover</string>
    <string name="nav_drawer_favorite">Favorite</string>
    <string name="nav_drawer_preferences">Settings</string>
    <string name="nav_drawer_about">About</string>
    <string name="nav_header_title">Ivan Petrov</string>
    <string name="nav_header_subtitle">ivan.petrov@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Media list item -->
    <string name="media_logo_hint">Media logo image</string>

    <!-- Media details item -->

    <!-- Media list fragment -->
    <string name="add_media_button_hint">Add media to favorites</string>
    <string name="search_results_loading">Loading…</string>
    <string name="search_results_count">%1$d results</string>
    <string name="see_the_results">See the results</string>
    <string name="filter_button">Filtering and sorting options for media list</string>

    <!-- Media details fragment -->

    <!-- About fragment -->
    <string name="about_fragment_title">About app</string>
    <string name="about_fragment_description">
        This app allows you to watch currently airing anime list,
        manage your personal list, and save your watch progress.
        All data will be persisted.
    </string>

    <!-- Backdrop -->
    <string name="sort_title">Sort</string>
    <string name="sort_by_title">Title</string>
    <string name="sort_by_popularity">Popularity</string>
    <string name="sort_by_average_score">Average Score</string>
    <string name="sort_by_trending">Trending</string>
    <string name="sort_by_favorites">Favorites</string>
    <string name="sort_by_date_added">Date Added</string>
    <string name="sort_by_release_date">Release Date</string>

    <!-- Preferences screen -->
    <!-- TODO: implement -->
    <!-- Preference Titles -->
    <string name="preferences_messages_header">Messages</string>
    <string name="preferences_sync_header">Sync</string>
    <!-- Messages Preferences -->
    <string name="preferences_signature_title">Your signature</string>
    <string name="preferences_reply_title">Default reply action</string>
    <!-- Sync Preferences -->
    <string name="preferences_sync_title">Sync email periodically</string>
    <string name="preferences_attachment_title">Download incoming attachments</string>
    <string name="preferences_attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="preferences_attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Network state item -->
    <string name="retry">Retry</string>
    <string name="no_results">No results 😓</string>
</resources>
