<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ongoingListFragment"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/nav_drawer_main" />
        <item
            android:id="@+id/preferenceScreen"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_drawer_preferences" />
        <item
            android:id="@+id/aboutScreen"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/nav_drawer_about" />
    </group>

</menu>
