<?xml version="1.0" encoding="utf-8"?>
<!--
 ~ Copyright 2021 Aleksandr Kamyshnikov
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License");
 ~ you may not use this file except in compliance with the License.
 ~ You may obtain a copy of the License at
 ~
 ~     https://www.apache.org/licenses/LICENSE-2.0
 ~
 ~ Unless required by applicable law or agreed to in writing, software
 ~ distributed under the License is distributed on an "AS IS" BASIS,
 ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ~ See the License for the specific language governing permissions and
 ~ limitations under the License.
 -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mediaListFragment">

    <action
        android:id="@+id/actionMediaDetails"
        app:destination="@id/mediaDetailFragment" >
    </action>

    <fragment
        android:id="@+id/mediaListFragment"
        android:name="name.eraxillan.anilistapp.ui.MediaListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_media_list">
    </fragment>

    <fragment
        android:id="@+id/mediaDetailFragment"
        android:name="name.eraxillan.anilistapp.ui.MediaDetailFragment"
        android:label="{title}"
        tools:layout="@layout/fragment_media_detail" >
        <argument
            android:name="media"
            app:argType="name.eraxillan.anilistapp.model.Media"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="title"
            app:argType="string"
            app:nullable="false"
            android:defaultValue="" />
    </fragment>

    <fragment
        android:id="@+id/favoriteFragment"
        android:name="name.eraxillan.anilistapp.ui.FavoriteListFragment"
        android:label="@string/nav_drawer_favorite"
        tools:layout="@layout/fragment_favorite_list" >
    </fragment>

    <fragment
        android:id="@+id/aboutScreen"
        android:name="name.eraxillan.anilistapp.ui.AboutFragment"
        android:label="@string/nav_drawer_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/preferenceScreen"
        android:name="name.eraxillan.anilistapp.ui.PreferenceFragment"
        android:label="@string/nav_drawer_preferences" />

</navigation>
